lb1 lb2 Переименованы отчеты и добавлены изменения с защит

--- a/lb2/views/books.ejs
+++ b/lb2/views/books.ejs
@@ -21,7 +21,7 @@
                     <input id="dueBefore" type="date" class="w3-input" name="dueBefore">
                 </div>
                 <div class="w3-col s12 m3 w3-center" style="padding-top: 22px;">
-                    <button id="applyFilter" class="w3-button w3-blue"><i class="fa fa-filter"></i> Фильтровать</button>
+                    <button id="applyFilter" type="button" class="w3-button w3-blue"><i class="fa fa-filter"></i> Фильтровать</button>
                     <button id="resetFilter" type="button" class="w3-button w3-light-grey">Сбросить</button>
                 </div>
             </form>
